--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-  <title>额了么外卖</title>
+  <title>外卖</title>
   <link rel="shortcut icon" href="static/favicon.ico">
   <link rel="stylesheet" type="text/css" href="static/css/reset.css">
 </head>
